[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_measure"
description = "PyTorch-native measurement science toolkit: IRT, CAT, psychometric metrics, and factor models for AI evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = "AIMS Foundations"},
]
keywords = [
    "pytorch",
    "irt",
    "item-response-theory",
    "psychometrics",
    "measurement",
    "evaluation",
    "adaptive-testing",
    "benchmarks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.3",
    "pyarrow>=0.12",
]

[project.optional-dependencies]
bayesian = ["pyro-ppl>=1.8"]
data = ["huggingface_hub>=0.16", "datasets>=2.10", "pandas>=2.0"]
viz = ["matplotlib>=3.7", "seaborn>=0.12", "tueplots>=0.0.14"]
dev = [
    "torch_measure[test,docs]",
    "pre-commit",
    "ruff",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints>=1.23",
    "sphinx-copybutton",
    "myst-parser",
]
all = [
    "torch_measure[bayesian,data,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/aims-foundations/torch_measure"
Documentation = "https://torch-measure.readthedocs.io"
Repository = "https://github.com/aims-foundations/torch_measure"
Issues = "https://github.com/aims-foundations/torch_measure/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/torch_measure/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
]
addopts = ["--strict-markers", "--color=yes"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["torch_measure"]

[tool.coverage.run]
source = ["src/torch_measure"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
show_missing = true
